<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_obstacle_detect_ros_msgs</name>
  <version>1.0.0</version>
  <description>A message package for depth_obstacle_detect_ros package</description>
  <maintainer email="ros@analog.com">Analog Devices</maintainer>
  <license>BSD</license>

  <depend>std_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>